[package]
name = "simple-rc-async"
version = "0.1.0"
edition = "2021"
authors = ["YuantianDing <work.yt.ding@gmail.com>"]
license = "MIT"
description = "DryadSynth solver for string transformation programs"
homepage = "https://github.com/YuantianDing/rc_async"
repository = "https://github.com/YuantianDing/rc_async"
readme = "README.md"
keywords = ["rc", "refcount", "reference counting", "thread local", "async", "asynchronous", "channel"]

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
futures-core = "0.3.30"

[dev-dependencies]
futures = "0.3.30"

